--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,8 @@ body.border-dark .main-content:after{
 .section-main{
 	background-size:cover;
 	background-image:url(../img/bg.jpg);
+	background:#303F9F;
+
 }
 .section-main:before{
 	content: ' ';
